--- a/package.json
+++ b/package.json
@@ -17,15 +17,12 @@
     "@types/dotenv-safe": "^8.1.2",
     "@types/express": "^4.17.13",
     "@types/nodemailer": "^6.4.4",
-    "@types/shelljs": "^0.8.11",
     "@types/supertest": "^2.0.16",
     "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0",
-    "axios": "^0.27.2",
     "basic-ftp": "^5.0.1",
     "buffer": "^6.0.3",
-    "canvas": "^2.9.3",
     "cors": "^2.8.5",
     "dayjs": "^1.11.6",
     "dotenv-safe": "^8.2.0",
@@ -34,41 +31,25 @@
     "eslint-plugin-prettier": "^4.0.0",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
-    "google-auth-library": "^8.1.1",
-    "html-entities": "^2.3.3",
     "http-status-codes": "^2.3.0",
     "jest": "^29.7.0",
+    "jest-express": "^1.12.0",
     "mongoose": "^8.0.1",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
     "nodejs": "^0.0.0",
     "nodemailer": "^6.7.5",
     "prettier": "^2.6.2",
     "reflect-metadata": "^0.1.13",
-    "shelljs": "^0.8.5",
     "supertest": "^6.3.3",
     "swagger-ui-express": "^4.4.0",
     "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
     "tsyringe": "^4.7.0",
-    "uuid": "^8.3.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@babel/cli": "^7.17.10",
-    "@babel/core": "^7.18.5",
-    "@babel/node": "^7.18.5",
-    "@babel/plugin-proposal-class-properties": "^7.17.12",
-    "@babel/plugin-proposal-decorators": "^7.18.2",
-    "@babel/plugin-transform-flow-strip-types": "^7.17.12",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-typescript": "^7.17.12",
     "@types/jest": "^29.5.8",
     "@types/typescript": "^2.0.0",
-    "@types/uuid": "^8.3.4",
     "@types/yup": "^0.29.14",
-    "babel-plugin-module-resolver": "^4.1.0",
-    "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "eslint": "^8.7.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
