--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0",
+    "axios": "^1.6.2",
     "basic-ftp": "^5.0.1",
     "buffer": "^6.0.3",
     "cors": "^2.8.5",
@@ -31,12 +32,16 @@
     "eslint-plugin-prettier": "^4.0.0",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
+    "google-auth-library": "^9.4.1",
     "http-status-codes": "^2.3.0",
     "jest": "^29.7.0",
     "jest-express": "^1.12.0",
     "mongoose": "^8.0.1",
     "nodejs": "^0.0.0",
     "nodemailer": "^6.7.5",
+    "passport": "^0.7.0",
+    "passport-linkedin": "^1.0.0",
+    "passport-linkedin-oauth2": "^2.0.0",
     "prettier": "^2.6.2",
     "reflect-metadata": "^0.1.13",
     "supertest": "^6.3.3",
@@ -48,6 +53,7 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.8",
+    "@types/passport-linkedin-oauth2": "^1.5.6",
     "@types/typescript": "^2.0.0",
     "@types/yup": "^0.29.14",
     "eslint": "^8.7.0",
